Prevent overflow of adjacency matrix table

--- a/src/main/resources/css/matrix.css
+++ b/src/main/resources/css/matrix.css
@@ -13,12 +13,8 @@
     justify-content: center;
 }
 
-.matrix-container {
-	overflow: auto;
-    resize: both;
-}
-
 #matrix {
+	display: block;
     overflow: auto;
     resize: both;
 }
